--- a/main.ipynb
+++ b/main.ipynb
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-17T08:16:31.658913Z",
-     "start_time": "2024-06-17T08:16:30.305988Z"
+     "end_time": "2024-06-18T12:34:01.962948Z",
+     "start_time": "2024-06-18T12:34:00.823107Z"
     }
    },
    "cell_type": "code",
@@ -32,11 +32,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import regex as re"
    ],
    "id": "7877b5192a0dd7e",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -47,14 +48,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-17T08:17:56.188970Z",
-     "start_time": "2024-06-17T08:16:32.210470Z"
+     "end_time": "2024-06-18T12:44:31.131560Z",
+     "start_time": "2024-06-18T12:43:23.019623Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "df = pd.read_csv('lipstip.csv')\n",
-    "df.head(2)"
+    "df = pd.read_csv('EFREI - LIPSTIP - 50k elements EPO.csv')\n",
+    "df.head(3)"
    ],
    "id": "a41f692bc8316e90",
    "outputs": [
@@ -64,22 +65,27 @@
        "   Numéro d'application Date d'application  Numero de publication  \\\n",
        "0              17167919         2017-04-25                3264223   \n",
        "1              17166775         2017-04-18                3235458   \n",
+       "2              17166069         2017-04-11                3249094   \n",
        "\n",
        "  date de publication                                                CPC  \\\n",
        "0          2018-01-03  ['B23K26-361', 'H04M1-0266', 'B23K26-402', 'G0...   \n",
        "1          2017-10-25  ['A61B17-68', 'A61B17-888', 'A61B17-8685', 'A6...   \n",
+       "2          2017-11-29                        ['D06F58-206', 'D06F58-20']   \n",
        "\n",
        "                                                 IPC  \\\n",
        "0  ['C08J7-04', 'H04M1-02', 'G06F1-16', 'B23K26-3...   \n",
        "1            ['A61B17-88', 'A61B17-68', 'A61B17-86']   \n",
+       "2                         ['D06F58-20', 'D06F58-02']   \n",
        "\n",
        "                                               claim  \\\n",
        "0  <!-- EPO <DP n=\"18\"> --><claim id=\"c-en-0001\" ...   \n",
        "1  <!-- EPO <DP n=\"20\"> --><claim id=\"c-en-0001\" ...   \n",
+       "2  <!-- EPO <DP n=\"22\"> --><claim id=\"c-en-0001\" ...   \n",
        "\n",
        "                                         description  \n",
        "0  <!-- EPO <DP n=\"1\"> --><p id=\"p0001\" num=\"0001...  \n",
-       "1  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">FIE...  "
+       "1  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">FIE...  \n",
+       "2  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\"><b>...  "
       ],
       "text/html": [
        "<div>\n",
@@ -133,53 +139,201 @@
        "      <td>&lt;!-- EPO &lt;DP n=\"20\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
        "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;FIE...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17166069</td>\n",
+       "      <td>2017-04-11</td>\n",
+       "      <td>3249094</td>\n",
+       "      <td>2017-11-29</td>\n",
+       "      <td>['D06F58-206', 'D06F58-20']</td>\n",
+       "      <td>['D06F58-20', 'D06F58-02']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"22\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;&lt;b&gt;...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "fa45d4863d1aa367"
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-17T08:15:41.466338Z",
-     "start_time": "2024-06-17T08:15:41.457832Z"
+     "end_time": "2024-06-18T12:35:57.149612Z",
+     "start_time": "2024-06-18T12:35:57.140018Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import os\n",
-    "import sys\n",
-    "import django\n",
+    "# vérifier s'il y a des doublons dans les numéros d'application\n",
+    "df['Numéro d\\'application'].duplicated().sum()\n",
     "\n",
-    "# Ajoutez le chemin du projet Django au chemin Python\n",
-    "sys.path.append('D:/PycharmProjects/MasterCamp/EXPLAIN/MastercampEXPLAIN')\n",
-    "\n",
-    "# Configurez les variables d'environnement et initialisez Django\n",
-    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'explain.settings')\n",
-    "django.setup()\n"
+    "# vérifier s'il y a des doublons dans les numero de publication\n",
+    "df['Numero de publication'].duplicated().sum()"
+   ],
+   "id": "7cdd0d3d0a1e636e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Nettoyage des données",
+   "id": "3f2cd41f626f2c76"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-18T12:45:53.334952Z",
+     "start_time": "2024-06-18T12:45:53.315124Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_2 = df.drop(columns=['Date d\\'application', 'Numero de publication', 'date de publication'])\n",
+    "df_2.head(3)\n"
    ],
    "id": "ef9f38778077d9c",
-   "outputs": [],
-   "execution_count": 2
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Numéro d'application                                                CPC  \\\n",
+       "0              17167919  ['B23K26-361', 'H04M1-0266', 'B23K26-402', 'G0...   \n",
+       "1              17166775  ['A61B17-68', 'A61B17-888', 'A61B17-8685', 'A6...   \n",
+       "2              17166069                        ['D06F58-206', 'D06F58-20']   \n",
+       "\n",
+       "                                                 IPC  \\\n",
+       "0  ['C08J7-04', 'H04M1-02', 'G06F1-16', 'B23K26-3...   \n",
+       "1            ['A61B17-88', 'A61B17-68', 'A61B17-86']   \n",
+       "2                         ['D06F58-20', 'D06F58-02']   \n",
+       "\n",
+       "                                               claim  \\\n",
+       "0  <!-- EPO <DP n=\"18\"> --><claim id=\"c-en-0001\" ...   \n",
+       "1  <!-- EPO <DP n=\"20\"> --><claim id=\"c-en-0001\" ...   \n",
+       "2  <!-- EPO <DP n=\"22\"> --><claim id=\"c-en-0001\" ...   \n",
+       "\n",
+       "                                         description  \n",
+       "0  <!-- EPO <DP n=\"1\"> --><p id=\"p0001\" num=\"0001...  \n",
+       "1  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">FIE...  \n",
+       "2  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\"><b>...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Numéro d'application</th>\n",
+       "      <th>CPC</th>\n",
+       "      <th>IPC</th>\n",
+       "      <th>claim</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17167919</td>\n",
+       "      <td>['B23K26-361', 'H04M1-0266', 'B23K26-402', 'G0...</td>\n",
+       "      <td>['C08J7-04', 'H04M1-02', 'G06F1-16', 'B23K26-3...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"18\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;p id=\"p0001\" num=\"0001...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17166775</td>\n",
+       "      <td>['A61B17-68', 'A61B17-888', 'A61B17-8685', 'A6...</td>\n",
+       "      <td>['A61B17-88', 'A61B17-68', 'A61B17-86']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"20\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;FIE...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17166069</td>\n",
+       "      <td>['D06F58-206', 'D06F58-20']</td>\n",
+       "      <td>['D06F58-20', 'D06F58-02']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"22\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;&lt;b&gt;...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": "",
    "id": "252f914999ed79cb"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-18T12:33:52.238100Z",
+     "start_time": "2024-06-18T12:33:51.829341Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "\n",
+   "id": "6d1f7d0a59575639",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# vérifier si y a des doublons dans les numéros d'application\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[43mdf\u001B[49m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mNuméro d\u001B[39m\u001B[38;5;130;01m\\'\u001B[39;00m\u001B[38;5;124mapplication\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mduplicated()\u001B[38;5;241m.\u001B[39msum()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "e0624f03aaf5d4ad"
   },
   {
    "metadata": {
@@ -210,7 +364,6 @@
     "            except KeyError as e:\n",
     "                print(f\"Clé manquante dans la ligne: {row} - Erreur: {e}\")\n",
     "\n",
-    "# Assurez-vous que le chemin vers votre fichier CSV est correct\n",
     "csv_file_path = 'D:/PycharmProjects/MasterCamp/EXPLAIN/MastercampEXPLAIN/lipstip.csv'\n",
     "load_csv_to_django_model(csv_file_path)\n"
    ],
