--- a/main.ipynb
+++ b/main.ipynb
@@ -48,44 +48,86 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-18T12:44:31.131560Z",
-     "start_time": "2024-06-18T12:43:23.019623Z"
+     "end_time": "2024-06-18T12:56:26.509408Z",
+     "start_time": "2024-06-18T12:54:26.711334Z"
     }
    },
    "cell_type": "code",
    "source": [
     "df = pd.read_csv('EFREI - LIPSTIP - 50k elements EPO.csv')\n",
-    "df.head(3)"
+    "df.head(50)"
    ],
    "id": "a41f692bc8316e90",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   Numéro d'application Date d'application  Numero de publication  \\\n",
-       "0              17167919         2017-04-25                3264223   \n",
-       "1              17166775         2017-04-18                3235458   \n",
-       "2              17166069         2017-04-11                3249094   \n",
+       "       Numéro d'application Date d'application  Numero de publication  \\\n",
+       "0                  17167919         2017-04-25                3264223   \n",
+       "1                  17166775         2017-04-18                3235458   \n",
+       "2                  17166069         2017-04-11                3249094   \n",
+       "3                  18771363         2018-03-05                3605724   \n",
+       "4                  19881950         2019-11-01                3713245   \n",
+       "...                     ...                ...                    ...   \n",
+       "49995              20214006         2017-06-13                3824893   \n",
+       "49996              19208111         2019-11-08                3650273   \n",
+       "49997              21179046         2019-12-20                3954707   \n",
+       "49998              20161577         2020-03-06                3876171   \n",
+       "49999              18198453         2018-10-03                3466528   \n",
        "\n",
-       "  date de publication                                                CPC  \\\n",
-       "0          2018-01-03  ['B23K26-361', 'H04M1-0266', 'B23K26-402', 'G0...   \n",
-       "1          2017-10-25  ['A61B17-68', 'A61B17-888', 'A61B17-8685', 'A6...   \n",
-       "2          2017-11-29                        ['D06F58-206', 'D06F58-20']   \n",
+       "      date de publication                                                CPC  \\\n",
+       "0              2018-01-03  ['B23K26-361', 'H04M1-0266', 'B23K26-402', 'G0...   \n",
+       "1              2017-10-25  ['A61B17-68', 'A61B17-888', 'A61B17-8685', 'A6...   \n",
+       "2              2017-11-29                        ['D06F58-206', 'D06F58-20']   \n",
+       "3              2020-02-05  ['H01P1-2138', 'H01P5-107', 'H01P1-2088', 'H01...   \n",
+       "4              2020-09-23      ['H04N21-4345', 'H04N21-4821', 'H04N21-4316']   \n",
+       "...                   ...                                                ...   \n",
+       "49995          2021-05-26  ['C09D7-63', 'A61Q3-02', 'A61K8-40', 'A61K8-04...   \n",
+       "49996          2020-05-13             ['B60R7-02', 'B60R5-04', 'B65D5-2014']   \n",
+       "49997          2022-02-16  ['C07K16-46', 'C07K16-2863', 'A61P35-00', 'C07...   \n",
+       "49998          2021-09-08  ['H04W4-80', 'G07F11-62', 'H04B5-79', 'G07F9-0...   \n",
+       "49999          2019-04-10  ['F01D25-002', 'B08B3-003', 'B01F23-235', 'B01...   \n",
        "\n",
-       "                                                 IPC  \\\n",
-       "0  ['C08J7-04', 'H04M1-02', 'G06F1-16', 'B23K26-3...   \n",
-       "1            ['A61B17-88', 'A61B17-68', 'A61B17-86']   \n",
-       "2                         ['D06F58-20', 'D06F58-02']   \n",
+       "                                                     IPC  \\\n",
+       "0      ['C08J7-04', 'H04M1-02', 'G06F1-16', 'B23K26-3...   \n",
+       "1                ['A61B17-88', 'A61B17-68', 'A61B17-86']   \n",
+       "2                             ['D06F58-20', 'D06F58-02']   \n",
+       "3                 ['H01P3-12', 'H01P1-213', 'H01P5-107']   \n",
+       "4                           ['H04N21-482', 'H04N21-262']   \n",
+       "...                                                  ...   \n",
+       "49995  ['C08J7-04', 'C09D7-63', 'C08G59-17', 'A61K31-...   \n",
+       "49996   ['B60R7-02', 'B60R5-04', 'B65D5-20', 'B65D5-54']   \n",
+       "49997  ['C07K16-46', 'C07K16-28', 'A61P35-00', 'A61K3...   \n",
+       "49998  ['H04B5-00', 'H04W4-80', 'G07F11-62', 'G06Q10-...   \n",
+       "49999  ['F01D25-00', 'B33Y80-00', 'B08B3-00', 'B01F3-...   \n",
        "\n",
-       "                                               claim  \\\n",
-       "0  <!-- EPO <DP n=\"18\"> --><claim id=\"c-en-0001\" ...   \n",
-       "1  <!-- EPO <DP n=\"20\"> --><claim id=\"c-en-0001\" ...   \n",
-       "2  <!-- EPO <DP n=\"22\"> --><claim id=\"c-en-0001\" ...   \n",
+       "                                                   claim  \\\n",
+       "0      <!-- EPO <DP n=\"18\"> --><claim id=\"c-en-0001\" ...   \n",
+       "1      <!-- EPO <DP n=\"20\"> --><claim id=\"c-en-0001\" ...   \n",
+       "2      <!-- EPO <DP n=\"22\"> --><claim id=\"c-en-0001\" ...   \n",
+       "3      <!-- EPO <DP n=\"62\"> --><claim id=\"c-en-0001\" ...   \n",
+       "4      <!-- EPO <DP n=\"14\"> --><claim id=\"c-en-0001\" ...   \n",
+       "...                                                  ...   \n",
+       "49995  <!-- EPO <DP n=\"66\"> --><claim id=\"c-en-0001\" ...   \n",
+       "49996  <!-- EPO <DP n=\"13\"> --><claim id=\"c-en-0001\" ...   \n",
+       "49997  <!-- EPO <DP n=\"176\"> --><claim id=\"c-en-0001\"...   \n",
+       "49998  <!-- EPO <DP n=\"15\"> --><claim id=\"c-en-0001\" ...   \n",
+       "49999  <!-- EPO <DP n=\"42\"> --><claim id=\"c-en-0001\" ...   \n",
        "\n",
-       "                                         description  \n",
-       "0  <!-- EPO <DP n=\"1\"> --><p id=\"p0001\" num=\"0001...  \n",
-       "1  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">FIE...  \n",
-       "2  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\"><b>...  "
+       "                                             description  \n",
+       "0      <!-- EPO <DP n=\"1\"> --><p id=\"p0001\" num=\"0001...  \n",
+       "1      <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">FIE...  \n",
+       "2      <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\"><b>...  \n",
+       "3      <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">Tec...  \n",
+       "4      <!-- EPO <DP n=\"1\"> --><p id=\"p0001\" num=\"0001...  \n",
+       "...                                                  ...  \n",
+       "49995  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">CRO...  \n",
+       "49996  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">BAC...  \n",
+       "49997  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\"><b>...  \n",
+       "49998  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">BAC...  \n",
+       "49999  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">BAC...  \n",
+       "\n",
+       "[50000 rows x 8 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -150,17 +192,106 @@
        "      <td>&lt;!-- EPO &lt;DP n=\"22\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
        "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;&lt;b&gt;...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18771363</td>\n",
+       "      <td>2018-03-05</td>\n",
+       "      <td>3605724</td>\n",
+       "      <td>2020-02-05</td>\n",
+       "      <td>['H01P1-2138', 'H01P5-107', 'H01P1-2088', 'H01...</td>\n",
+       "      <td>['H01P3-12', 'H01P1-213', 'H01P5-107']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"62\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;Tec...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19881950</td>\n",
+       "      <td>2019-11-01</td>\n",
+       "      <td>3713245</td>\n",
+       "      <td>2020-09-23</td>\n",
+       "      <td>['H04N21-4345', 'H04N21-4821', 'H04N21-4316']</td>\n",
+       "      <td>['H04N21-482', 'H04N21-262']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"14\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;p id=\"p0001\" num=\"0001...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>20214006</td>\n",
+       "      <td>2017-06-13</td>\n",
+       "      <td>3824893</td>\n",
+       "      <td>2021-05-26</td>\n",
+       "      <td>['C09D7-63', 'A61Q3-02', 'A61K8-40', 'A61K8-04...</td>\n",
+       "      <td>['C08J7-04', 'C09D7-63', 'C08G59-17', 'A61K31-...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"66\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;CRO...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>19208111</td>\n",
+       "      <td>2019-11-08</td>\n",
+       "      <td>3650273</td>\n",
+       "      <td>2020-05-13</td>\n",
+       "      <td>['B60R7-02', 'B60R5-04', 'B65D5-2014']</td>\n",
+       "      <td>['B60R7-02', 'B60R5-04', 'B65D5-20', 'B65D5-54']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"13\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;BAC...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>21179046</td>\n",
+       "      <td>2019-12-20</td>\n",
+       "      <td>3954707</td>\n",
+       "      <td>2022-02-16</td>\n",
+       "      <td>['C07K16-46', 'C07K16-2863', 'A61P35-00', 'C07...</td>\n",
+       "      <td>['C07K16-46', 'C07K16-28', 'A61P35-00', 'A61K3...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"176\"&gt; --&gt;&lt;claim id=\"c-en-0001\"...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;&lt;b&gt;...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>20161577</td>\n",
+       "      <td>2020-03-06</td>\n",
+       "      <td>3876171</td>\n",
+       "      <td>2021-09-08</td>\n",
+       "      <td>['H04W4-80', 'G07F11-62', 'H04B5-79', 'G07F9-0...</td>\n",
+       "      <td>['H04B5-00', 'H04W4-80', 'G07F11-62', 'G06Q10-...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"15\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;BAC...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>18198453</td>\n",
+       "      <td>2018-10-03</td>\n",
+       "      <td>3466528</td>\n",
+       "      <td>2019-04-10</td>\n",
+       "      <td>['F01D25-002', 'B08B3-003', 'B01F23-235', 'B01...</td>\n",
+       "      <td>['F01D25-00', 'B33Y80-00', 'B08B3-00', 'B01F3-...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"42\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;BAC...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>50000 rows × 8 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 10
   },
   {
    "metadata": {
