--- a/main (1).ipynb
+++ b/main (1).ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "62f1f3d6",
    "metadata": {},
    "outputs": [],
@@ -72,6 +72,249 @@
     "sample_df = joblib.load('sample_df_with_embeddings.pkl')\n",
     "log_reg_model = joblib.load('log_reg_model.pkl')\n",
     "scaler = joblib.load('scaler.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "698ebd4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Numéro d'application</th>\n",
+       "      <th>CPC</th>\n",
+       "      <th>claim</th>\n",
+       "      <th>description</th>\n",
+       "      <th>infos_essentielles</th>\n",
+       "      <th>embeddings</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17167919</td>\n",
+       "      <td>['B23K26-361', 'H04M1-0266', 'B23K26-402', 'G0...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"18\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;p id=\"p0001\" num=\"0001...</td>\n",
+       "      <td>[The present invention relates to a cover wind...</td>\n",
+       "      <td>[0.3138988, 0.26403093, 0.10683677, -0.6253272...</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17166775</td>\n",
+       "      <td>['A61B17-68', 'A61B17-888', 'A61B17-8685', 'A6...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"20\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;FIE...</td>\n",
+       "      <td>[FIELD OF THE INVENTIONThe present disclosure ...</td>\n",
+       "      <td>[0.09775737, 0.3408985, 0.1598092, -0.6033868,...</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17166069</td>\n",
+       "      <td>['D06F58-206', 'D06F58-20']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"22\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;&lt;b&gt;...</td>\n",
+       "      <td>[FIELDThe present invention relates to a techn...</td>\n",
+       "      <td>[0.25319842, 0.29747707, -0.26438597, -0.38860...</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18771363</td>\n",
+       "      <td>['H01P1-2138', 'H01P5-107', 'H01P1-2088', 'H01...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"62\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;Tec...</td>\n",
+       "      <td>[Technical FieldThe present invention relates ...</td>\n",
+       "      <td>[0.33116287, 0.20077322, -0.3155861, -0.580717...</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19881950</td>\n",
+       "      <td>['H04N21-4345', 'H04N21-4821', 'H04N21-4316']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"14\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;p id=\"p0001\" num=\"0001...</td>\n",
+       "      <td>[The application claims the priority to Chines...</td>\n",
+       "      <td>[0.26560083, 0.34741062, 0.003163477, -0.40348...</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>20214006</td>\n",
+       "      <td>['C09D7-63', 'A61Q3-02', 'A61K8-40', 'A61K8-04...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"66\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;CRO...</td>\n",
+       "      <td>[CROSS-REFERENCE TO RELATED APPLICATIONSThis a...</td>\n",
+       "      <td>[0.22040953, 0.45384014, 0.16293938, -0.480061...</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>19208111</td>\n",
+       "      <td>['B60R7-02', 'B60R5-04', 'B65D5-2014']</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"13\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;BAC...</td>\n",
+       "      <td>[BACKGROUNDFIELDThe present disclosure relates...</td>\n",
+       "      <td>[0.18217003, 0.41443765, -0.1591843, -0.660875...</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>21179046</td>\n",
+       "      <td>['C07K16-46', 'C07K16-2863', 'A61P35-00', 'C07...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"176\"&gt; --&gt;&lt;claim id=\"c-en-0001\"...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;&lt;b&gt;...</td>\n",
+       "      <td>[CROSS-REFERENCE TO RELATED APPLICATIONSThis I...</td>\n",
+       "      <td>[0.22763453, 0.22127223, 0.0045082457, -0.6876...</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>20161577</td>\n",
+       "      <td>['H04W4-80', 'G07F11-62', 'H04B5-79', 'G07F9-0...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"15\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;BAC...</td>\n",
+       "      <td>[BACKGROUND OF THE INVENTIONThis invention rel...</td>\n",
+       "      <td>[0.22213387, 0.24573526, 0.056598816, -0.11816...</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>18198453</td>\n",
+       "      <td>['F01D25-002', 'B08B3-003', 'B01F23-235', 'B01...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"42\"&gt; --&gt;&lt;claim id=\"c-en-0001\" ...</td>\n",
+       "      <td>&lt;!-- EPO &lt;DP n=\"1\"&gt; --&gt;&lt;heading id=\"h0001\"&gt;BAC...</td>\n",
+       "      <td>[BACKGROUNDThe subject matter disclosed herein...</td>\n",
+       "      <td>[0.18926746, 0.2706018, 0.10301417, -0.5977381...</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Numéro d'application  \\\n",
+       "0                  17167919   \n",
+       "1                  17166775   \n",
+       "2                  17166069   \n",
+       "3                  18771363   \n",
+       "4                  19881950   \n",
+       "...                     ...   \n",
+       "49995              20214006   \n",
+       "49996              19208111   \n",
+       "49997              21179046   \n",
+       "49998              20161577   \n",
+       "49999              18198453   \n",
+       "\n",
+       "                                                     CPC  \\\n",
+       "0      ['B23K26-361', 'H04M1-0266', 'B23K26-402', 'G0...   \n",
+       "1      ['A61B17-68', 'A61B17-888', 'A61B17-8685', 'A6...   \n",
+       "2                            ['D06F58-206', 'D06F58-20']   \n",
+       "3      ['H01P1-2138', 'H01P5-107', 'H01P1-2088', 'H01...   \n",
+       "4          ['H04N21-4345', 'H04N21-4821', 'H04N21-4316']   \n",
+       "...                                                  ...   \n",
+       "49995  ['C09D7-63', 'A61Q3-02', 'A61K8-40', 'A61K8-04...   \n",
+       "49996             ['B60R7-02', 'B60R5-04', 'B65D5-2014']   \n",
+       "49997  ['C07K16-46', 'C07K16-2863', 'A61P35-00', 'C07...   \n",
+       "49998  ['H04W4-80', 'G07F11-62', 'H04B5-79', 'G07F9-0...   \n",
+       "49999  ['F01D25-002', 'B08B3-003', 'B01F23-235', 'B01...   \n",
+       "\n",
+       "                                                   claim  \\\n",
+       "0      <!-- EPO <DP n=\"18\"> --><claim id=\"c-en-0001\" ...   \n",
+       "1      <!-- EPO <DP n=\"20\"> --><claim id=\"c-en-0001\" ...   \n",
+       "2      <!-- EPO <DP n=\"22\"> --><claim id=\"c-en-0001\" ...   \n",
+       "3      <!-- EPO <DP n=\"62\"> --><claim id=\"c-en-0001\" ...   \n",
+       "4      <!-- EPO <DP n=\"14\"> --><claim id=\"c-en-0001\" ...   \n",
+       "...                                                  ...   \n",
+       "49995  <!-- EPO <DP n=\"66\"> --><claim id=\"c-en-0001\" ...   \n",
+       "49996  <!-- EPO <DP n=\"13\"> --><claim id=\"c-en-0001\" ...   \n",
+       "49997  <!-- EPO <DP n=\"176\"> --><claim id=\"c-en-0001\"...   \n",
+       "49998  <!-- EPO <DP n=\"15\"> --><claim id=\"c-en-0001\" ...   \n",
+       "49999  <!-- EPO <DP n=\"42\"> --><claim id=\"c-en-0001\" ...   \n",
+       "\n",
+       "                                             description  \\\n",
+       "0      <!-- EPO <DP n=\"1\"> --><p id=\"p0001\" num=\"0001...   \n",
+       "1      <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">FIE...   \n",
+       "2      <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\"><b>...   \n",
+       "3      <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">Tec...   \n",
+       "4      <!-- EPO <DP n=\"1\"> --><p id=\"p0001\" num=\"0001...   \n",
+       "...                                                  ...   \n",
+       "49995  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">CRO...   \n",
+       "49996  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">BAC...   \n",
+       "49997  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\"><b>...   \n",
+       "49998  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">BAC...   \n",
+       "49999  <!-- EPO <DP n=\"1\"> --><heading id=\"h0001\">BAC...   \n",
+       "\n",
+       "                                      infos_essentielles  \\\n",
+       "0      [The present invention relates to a cover wind...   \n",
+       "1      [FIELD OF THE INVENTIONThe present disclosure ...   \n",
+       "2      [FIELDThe present invention relates to a techn...   \n",
+       "3      [Technical FieldThe present invention relates ...   \n",
+       "4      [The application claims the priority to Chines...   \n",
+       "...                                                  ...   \n",
+       "49995  [CROSS-REFERENCE TO RELATED APPLICATIONSThis a...   \n",
+       "49996  [BACKGROUNDFIELDThe present disclosure relates...   \n",
+       "49997  [CROSS-REFERENCE TO RELATED APPLICATIONSThis I...   \n",
+       "49998  [BACKGROUND OF THE INVENTIONThis invention rel...   \n",
+       "49999  [BACKGROUNDThe subject matter disclosed herein...   \n",
+       "\n",
+       "                                              embeddings label  \n",
+       "0      [0.3138988, 0.26403093, 0.10683677, -0.6253272...     B  \n",
+       "1      [0.09775737, 0.3408985, 0.1598092, -0.6033868,...     A  \n",
+       "2      [0.25319842, 0.29747707, -0.26438597, -0.38860...     D  \n",
+       "3      [0.33116287, 0.20077322, -0.3155861, -0.580717...     H  \n",
+       "4      [0.26560083, 0.34741062, 0.003163477, -0.40348...     H  \n",
+       "...                                                  ...   ...  \n",
+       "49995  [0.22040953, 0.45384014, 0.16293938, -0.480061...     C  \n",
+       "49996  [0.18217003, 0.41443765, -0.1591843, -0.660875...     B  \n",
+       "49997  [0.22763453, 0.22127223, 0.0045082457, -0.6876...     C  \n",
+       "49998  [0.22213387, 0.24573526, 0.056598816, -0.11816...     H  \n",
+       "49999  [0.18926746, 0.2706018, 0.10301417, -0.5977381...     Y  \n",
+       "\n",
+       "[50000 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_df"
    ]
   },
   {
@@ -2219,6 +2462,17 @@
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlime_tabular\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Créer un explainer LIME\u001b[39;00m\n\u001b[0;32m      5\u001b[0m explainer \u001b[38;5;241m=\u001b[39m lime\u001b[38;5;241m.\u001b[39mlime_tabular\u001b[38;5;241m.\u001b[39mLimeTabularExplainer(\n\u001b[1;32m----> 6\u001b[0m     \u001b[43mX_train_scaled\u001b[49m, \n\u001b[0;32m      7\u001b[0m     feature_names\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmbedding_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(X_train_scaled\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])], \n\u001b[0;32m      8\u001b[0m     class_names\u001b[38;5;241m=\u001b[39munique_labels, \n\u001b[0;32m      9\u001b[0m     discretize_continuous\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     10\u001b[0m )\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Prendre un échantillon de données de test\u001b[39;00m\n\u001b[0;32m     13\u001b[0m X_test_sample \u001b[38;5;241m=\u001b[39m X_test_scaled[:\u001b[38;5;241m5\u001b[39m]  \u001b[38;5;66;03m# Choisir un plus petit échantillon pour la démonstration\u001b[39;00m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'X_train_scaled' is not defined"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
