--- a/main (1).ipynb
+++ b/main (1).ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "adea360d64e25208",
    "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "28cefc14783c5c74"
   },
   {
    "cell_type": "markdown",
@@ -2458,10 +2460,10 @@
      "evalue": "name 'X_train_scaled' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlime_tabular\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Créer un explainer LIME\u001b[39;00m\n\u001b[0;32m      5\u001b[0m explainer \u001b[38;5;241m=\u001b[39m lime\u001b[38;5;241m.\u001b[39mlime_tabular\u001b[38;5;241m.\u001b[39mLimeTabularExplainer(\n\u001b[1;32m----> 6\u001b[0m     \u001b[43mX_train_scaled\u001b[49m, \n\u001b[0;32m      7\u001b[0m     feature_names\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmbedding_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(X_train_scaled\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])], \n\u001b[0;32m      8\u001b[0m     class_names\u001b[38;5;241m=\u001b[39munique_labels, \n\u001b[0;32m      9\u001b[0m     discretize_continuous\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     10\u001b[0m )\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Prendre un échantillon de données de test\u001b[39;00m\n\u001b[0;32m     13\u001b[0m X_test_sample \u001b[38;5;241m=\u001b[39m X_test_scaled[:\u001b[38;5;241m5\u001b[39m]  \u001b[38;5;66;03m# Choisir un plus petit échantillon pour la démonstration\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_train_scaled' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 6\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mlime\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mlime_tabular\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;66;03m# Créer un explainer LIME\u001B[39;00m\n\u001B[0;32m      5\u001B[0m explainer \u001B[38;5;241m=\u001B[39m lime\u001B[38;5;241m.\u001B[39mlime_tabular\u001B[38;5;241m.\u001B[39mLimeTabularExplainer(\n\u001B[1;32m----> 6\u001B[0m     \u001B[43mX_train_scaled\u001B[49m, \n\u001B[0;32m      7\u001B[0m     feature_names\u001B[38;5;241m=\u001B[39m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mEmbedding_\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(i) \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(X_train_scaled\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m])], \n\u001B[0;32m      8\u001B[0m     class_names\u001B[38;5;241m=\u001B[39munique_labels, \n\u001B[0;32m      9\u001B[0m     discretize_continuous\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[0;32m     10\u001B[0m )\n\u001B[0;32m     12\u001B[0m \u001B[38;5;66;03m# Prendre un échantillon de données de test\u001B[39;00m\n\u001B[0;32m     13\u001B[0m X_test_sample \u001B[38;5;241m=\u001B[39m X_test_scaled[:\u001B[38;5;241m5\u001B[39m]  \u001B[38;5;66;03m# Choisir un plus petit échantillon pour la démonstration\u001B[39;00m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'X_train_scaled' is not defined"
      ]
     },
     {
@@ -2469,10 +2471,10 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001B[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001B[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001B[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001B[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
